gccida/c3/push_range_stack
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/push_range_stack/src/c-typeck.c:6164:11: error: use of undeclared identifier 'constructor_range_stack_0'; did you mean 'constructor_range_stack'?
p->prev = constructor_range_stack_0; 
          ^~~~~~~~~~~~~~~~~~~~~~~~~
          constructor_range_stack
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/push_range_stack/src/c-typeck.c:5036:33: note: 'constructor_range_stack' declared here
struct constructor_range_stack *constructor_range_stack;
                                ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/push_range_stack/src/c-typeck.c:6169:12: error: use of undeclared identifier 'constructor_stack_0'; did you mean 'constructor_stack'?
p->stack = constructor_stack_0; 
           ^~~~~~~~~~~~~~~~~~~
           constructor_stack
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/push_range_stack/src/c-typeck.c:5021:27: note: 'constructor_stack' declared here
struct constructor_stack *constructor_stack;
                          ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/push_range_stack/src/c-typeck.c:6171:6: error: use of undeclared identifier 'constructor_range_stack_0'; did you mean 'constructor_range_stack'?
if ( constructor_range_stack_0 ) 
     ^~~~~~~~~~~~~~~~~~~~~~~~~
     constructor_range_stack
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/push_range_stack/src/c-typeck.c:5036:33: note: 'constructor_range_stack' declared here
struct constructor_range_stack *constructor_range_stack;
                                ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/push_range_stack/src/c-typeck.c:6172:1: error: use of undeclared identifier 'constructor_range_stack_0'; did you mean 'constructor_range_stack'?
constructor_range_stack_0->next = p; 
^~~~~~~~~~~~~~~~~~~~~~~~~
constructor_range_stack
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/push_range_stack/src/c-typeck.c:5036:33: note: 'constructor_range_stack' declared here
struct constructor_range_stack *constructor_range_stack;
                                ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/push_range_stack/src/c-typeck.c:6173:1: error: use of undeclared identifier 'constructor_range_stack_0'; did you mean 'constructor_range_stack'?
constructor_range_stack_0 = p; 
^~~~~~~~~~~~~~~~~~~~~~~~~
constructor_range_stack
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/push_range_stack/src/c-typeck.c:5036:33: note: 'constructor_range_stack' declared here
struct constructor_range_stack *constructor_range_stack;
                                ^
5 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/push_range_stack/src/obj/c-typeck.o] Error 1
